commonsPackageUAT/main/default/objects/Account/fields/Account_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Ext_Id__c</fullName>
    <description>External Id for Copado ADD</description>
    <externalId>true</externalId>
    <label>Account Ext Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>