commonsPackageUAT/main/default/objects/Account/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <label>Account Region</label>
    <type>TextArea</type>
</CustomField>