commonsPackageUAT/main/default/objects/Account/fields/Account_SAP_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Account SAP External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>