commonsPackageUAT/main/default/objects/Account/fields/Is_VIP_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_VIP_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VIP Account?</label>
    <type>Checkbox</type>
</CustomField>