commonsPackageUAT/main/default/objects/Account/fields/Long_Json__c.field-meta.xml
<CustomField>
    <fullName>Long_Json__c</fullName>
    <label>Long Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>