commonsPackageUAT/main/default/objects/Account/validationRules/Check_Addresses.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Addresses</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>Test on my branch</errorMessage>
</ValidationRule>